# evpoco

./: .gitignore  CMakeLists.txt  Makefile  Overview.drawio  README.md  asan.CMakeLists.txt  b.sh  benchmark_result_07012020  build_cmake.sh  cmake.env  cnf  components  debug.CMakeLists.txt  how_it_happens.md  pool_design.md  tsan.CMakeLists.txt  version
EVNet/samples/EVHTTPFormServer/: CMakeLists.txt
EVNet/samples/EVHTTPFormServer/src/: EVHTTPFormServer.cpp
NetSSL_OpenSSL/samples/EVHTTPSTimeServer/: CMakeLists.txt  Makefile  key.pem
NetSSL_OpenSSL/samples/EVHTTPSTimeServer/src/: EVHTTPSTimeServer.cpp
NetSSL_OpenSSL/samples/HTTPSFormServer/: CMakeLists.txt  HTTPSFormServer.properties
NetSSL_OpenSSL/samples/HTTPSFormServer/src/: HTTPSFormServer.cpp
evdata/: CMakeLists.txt
evdata/cmake/: PocoevdataConfig.cmake
evdata/evclient/: CMakeLists.txt
evdata/evclient/cmake/: PocoevclientConfig.cmake
evdata/evclient/src/: evl_pool.cpp
evdata/evmysql/: CMakeLists.txt
evdata/evmysql/cmake/: PocoevmysqlConfig.cmake
evdata/evmysql/src/: ev_connection.cpp  ev_main.cpp  ev_statement.cpp
evdata/evpoolrepos/: CMakeLists.txt
evdata/evpoolrepos/cmake/: PocoevpoolreposConfig.cmake
evdata/evpoolrepos/src/: evl_pool_repos.cpp
evdata/evpostgres/: CMakeLists.txt  psql.15.3.build.notes.md
evdata/evpostgres/cmake/: PocoevpostgresConfig.cmake
evdata/evpostgres/src/: ev_connection.cpp  ev_main.cpp  ev_postgres.lua  ev_statement.cpp  ev_typeutils.cpp
evdata/evredis/: CMakeLists.txt
evdata/evredis/cmake/: PocoevredisConfig.cmake
evdata/evredis/src/: ev_redis_connection.cpp
evdata/evsqlite/: CMakeLists.txt
evdata/evsqlite/cmake/: PocoevsqliteConfig.cmake
evdata/evsqlite/src/: ev_connection.cpp  ev_main.cpp  ev_statement.cpp
evdata/include/Poco/evdata/: ev_sql_access.h
evdata/src/: ev_data_access.cpp  ev_ffi_interface.cpp  ev_sql_access.cpp  ev_sql_locks.c  ev_sql_socket.c  ev_types.lua  rdbms_interface.lua
evluaserver/: CMakeLists.txt  evlua.properties  evlua_mapper.lua  evluaserver.properties  main.lua  mapper.lua
evluaserver/cmake/: PocoevluautilConfig.cmake
evluaserver/evlcrypto/: CMakeLists.txt  GNUInstallDirs.cmake  evlcrypto_package.pc.in
evluaserver/evlcrypto/cmake/: PocoevlcryptoConfig.cmake
evluaserver/evlcrypto/src/: evl_crypto.cpp
evluaserver/evlnetssl/: CMakeLists.txt
evluaserver/evlnetssl/cmake/: PocoevlnetsslConfig.cmake
evluaserver/evlnetssl/src/: evl_netssl.cpp
evluaserver/samples/LUA/evl_crypto/: cipher.lua  pgp.lua  spgp.lua  working_spgp.lua
evluaserver/samples/LUA/src/: 1formserver.lua  async_task.lua  companies.lua  echoserver.lua  evluaserver.properties  formserver.lua  handler.lua  http_req_processor.lua  imgserver.lua  init_async_task.lua  main.lua  mapper.lua  mongo_connection_manager.lua  orchserver.lua  rest_url_parser.lua  roc_db_param.lua  schema_companies.lua  vidserver.lua
evluaserver/src/: evlua.cpp  evlua_util.cpp  evluaserver.cpp  for_evlua.cpp
evnet/: CMakeLists.txt  README.md
evnet/cmake/: PocoevnetConfig.cmake
evnet/design/: chunked_memory_stream.cpp  design.chunked_memory_stream  ev_include.h  memory_buffer_list.h
evnet/include/Poco/evnet/: EVAcceptedSocket.h  EVAcceptedStreamSocket.h  EVCLServerRequestImpl.h  EVCLServerResponseImpl.h  EVCommandLineProcessingState.h  EVConnectedStreamSocket.h  EVEventNotification.h  EVHTTPChunkedStream.h  EVHTTPClientSession.h  EVHTTPFixedLengthStream.h  EVHTTPHeaderStream.h  EVHTTPProcessingState.h  EVHTTPRequest.h  EVHTTPRequestHandler.h  EVHTTPRequestHandlerFactory.h  EVHTTPRequestProcessor.h  EVHTTPRequestProcessorFactory.h  EVHTTPResponse.h  EVHTTPServer.h  EVHTTPServerRequestImpl.h  EVHTTPServerResponseImpl.h  EVHTTPServerSession.h  EVHTTPStream.h  EVLHTTPRequestHandler.h  EVProcessingState.h  EVServer.h  EVServerRequest.h  EVServerResponse.h  EVServerSession.h  EVStream.h  EVStreamSocketLRUList.h  EVTCPServer.h  EVTCPServerConnection.h  EVTCPServerConnectionFactory.h  EVTCPServerDispatcher.h  EVTCPServerNotification.h  EVTCPServiceRequest.h  EVUpstreamEventNotification.h  evnet.h  evnet_lua.h
evnet/samples/: CMakeLists.txt  Makefile
evnet/samples/EVHTTPEchoServer/: CMakeLists.txt
evnet/samples/EVHTTPEchoServer/src/: EVHTTPEchoServer.cpp
evnet/samples/EVHTTPFormServer/: CMakeLists.txt  EVHTTPFormServer.properties  Makefile
evnet/samples/EVHTTPFormServer/src/: EVHTTPFormServer.cpp
evnet/samples/EVHTTPImgFormServer/: CMakeLists.txt  EVHTTPImgFormServer.properties
evnet/samples/EVHTTPImgFormServer/src/: EVHTTPImgFormServer.cpp
evnet/samples/EVHTTPOrchServer/: CMakeLists.txt  EVHTTPOrchServer.properties  Makefile
evnet/samples/EVHTTPOrchServer/src/: EVHTTPOrchServer.cpp
evnet/samples/LUA/src/: 1formserver.lua  echoserver.lua  formserver.lua  handler.lua  mapper.lua  (+1 more)
evnet/samples/LUAEVServer/: CMakeLists.txt
evnet/src/: EVAcceptedStreamSocket.cpp  EVCLServerRequestImpl.cpp  EVCLServerResponseImpl.cpp  EVCommandLineProcessingState.cpp  EVConnectedStreamSocket.cpp  EVEventNotification.cpp  EVHTTPChunkedStream.cpp  EVHTTPClientSession.cpp  EVHTTPFixedLengthStream.cpp  EVHTTPHeaderStream.cpp  EVHTTPProcessingState.cpp  EVHTTPRequest.cpp  EVHTTPRequestHandler.cpp  EVHTTPRequestHandlerFactory.cpp  EVHTTPRequestProcessor.cpp  EVHTTPRequestProcessorFactory.cpp  EVHTTPResponse.cpp  EVHTTPServer.cpp  EVHTTPServerRequestImpl.cpp  EVHTTPServerResponseImpl.cpp  EVHTTPServerSession.cpp  EVHTTPStream.cpp  EVLHTTPRequestHandler.cpp  EVLProperties.cpp  EVMailMessage.cpp  EVServer.cpp  EVServerRequest.cpp  EVServerResponse.cpp  EVServerSession.cpp  EVStream.cpp  EVStreamSocketLRUList.cpp  EVTCPServer.cpp  EVTCPServerConnection.cpp  EVTCPServerConnectionFactory.cpp  EVTCPServerDispatcher.cpp  EVTCPServerNotification.cpp  EVTCPServiceRequest.cpp  EVUpstreamEventNotification.cpp  evnet_lua.cpp  http_request_factory.lua  (+1 more)
lualib/: CMakeLists.txt
lualib/cmake/: PocolualibConfig.cmake
lualib/cond_parse/: Makefile  calc  calc.l  calc.tab.c  calc.tab.h  calc.y  condition_parser_mem.c  condition_parser_mem.h  lex.yy.c  lex.yy.h
lualib/src/: evlua_dummy.cpp
(+179 files in other folders)
